--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <div id="firebaseui-auth-container"></div>
-    <p id="loader">Carregando...</p>
+    <p id="loader">Carregando....</p>
 
     <!-- Script externo que inicializa o Firebase -->
     <script src="script.js" defer></script>
