--- a/index.html
+++ b/index.html
@@ -13,11 +13,32 @@
     <script src="https://www.gstatic.com/firebasejs/10.14.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.js"></script>
     <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.css" />
-
   </head>
   <body>
+    <h2>Login</h2>
+    <div id="login-section">
+      <label for="email">Email:</label>
+      <input type="email" id="email" placeholder="Digite seu email" required />
+      <br>
+      <label for="password">Senha:</label>
+      <input type="password" id="password" placeholder="Digite sua senha" required />
+      <br>
+      <button onclick="login()">Entrar</button>
+    </div>
+
+    <h2>Cadastro</h2>
+    <div id="signup-section">
+      <label for="signup-email">Email:</label>
+      <input type="email" id="signup-email" placeholder="Digite seu email" required />
+      <br>
+      <label for="signup-password">Senha:</label>
+      <input type="password" id="signup-password" placeholder="Digite sua senha" required />
+      <br>
+      <button onclick="signUp()">Cadastrar</button>
+    </div>
+
     <div id="firebaseui-auth-container"></div>
-    <p id="loader">Carregando....</p>
+    <p id="loader">Carregando...</p>
 
     <!-- Script externo que inicializa o Firebase -->
     <script src="script.js" defer></script>
